--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "gtmpl"
+name = "gtmpl-ng"
 version = "0.7.2"
-authors = ["Florian Dieminger <me@fiji-flo.de>", "Paul Colin Hennig"]
-description = "The Golang Templating Language for Rust"
+authors = ["Florian Dieminger <me@fiji-flo.de>", "Paul Colin Hennig <8d_fvfmaa-o2wf_79aqig6g2ki6-09ffkeqmyo3d@vindelicum.eu>"]
+description = "The Golang Templating Language for Rust (fork with line number fix)"
 license = "MIT"
 repository = "https://github.com/firstdorsal/gtmpl-rust"
-documentation = "https://docs.rs/crate/gtmpl"
+documentation = "https://docs.rs/crate/gtmpl-ng"
 keywords = ["golang", "template", "templating"]
 categories = ["template-engine"]
 readme = "README.md"
